2013-07-20  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* exceptions.cc (signal_exit): Remove comment.  Use
	__builtin_frame_address.

2013-07-20  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* exceptions.cc (signal_exit): Nope.  Nevermind.  Dump core
	unconditionally.

2013-07-19  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* exceptions.cc (signal_exit): Add a FIXME comment.

2013-07-19  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* exceptions.cc (signal_exit): Only dump core when it's a "kernel"
	signal.  Only use RtlCaptureContext on x86_64.  It doesn't seem to do
	what's expected on x86.

2013-07-19  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* spawn.cc (child_info_spawn::worker): Reinstate using temp buffer for
	wide character command-line storage.  Use wcs method to convert command
	line.
	* winf.h (lb_wcs): Delete.
	(linebuf::wcs): Implement new single-argument method.

2013-07-19  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* lib/libcmain.c (main): Don't point to last quoted character if the
	only thing in the buffer is the program name.

2013-07-19  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* common.din: Export GetCommandLine{A,W}.
	* kernel32.cc: Add includes needed for GetCommandLine functions.
	(ucmd): New function.
	(cygwin_GetCommandLineW): Ditto.
	(cygwin_GetCommandLineA): Ditto.
	* spawn.cc (child_info_spawn::worker): Rename one_line -> cmd.  Use
	lb_wcs macro to generate a wide character version of the line buffer.
	Remove duplicate printing of command line.  Don't access members of
	linebuf directly.
	* winf.h: Use pragma once.
	(linebuf): Make storage private.
	(linebuf::operator size_t): New operator.  Return size of buf.
	(linebuf::operator wchar_t): New operator.
	(linebuf::wcs): New function.
	(lb_wcs): New macro.
	* include/cygwin/version.h: Bump API minor number to 268.

	* strfuncs.cc: Clarify descriptive file comment.

2013-07-19  Corinna Vinschen  <corinna@vinschen.de>
