@@ -1,3 +1,8 @@
+2013-07-21  Corinna Vinschen  <corinna@vinschen.de>
+
+	* regex/regcomp.c (wgetnext): Add a kludge to be more glibc compatible.
+	Add comment to explain.
+
 2013-07-20  Christopher Faylor  <me.cygwin2013@cgf.cx>
 
 	* exceptions.cc (signal_exit): Remove comment.  Use
